--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "styled-components": "^5.3.0"
