separate action Types

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
   "extends": [
       "@rocketseat/eslint-config/react"
   ],
+  "rules": {
+    "no-unused-vars":"off"
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {        
       "warnOnUnsupportedTypeScriptVersion": false
